--- a/test/MvcTemplate.Tests/packages.config
+++ b/test/MvcTemplate.Tests/packages.config
@@ -18,7 +18,11 @@
   <package id="NSubstitute" version="1.8.1.0" targetFramework="net45" />
   <package id="System.Linq.Dynamic" version="1.0.4" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
-  <package id="xunit" version="1.9.2" targetFramework="net45" />
-  <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="0.99.9-build1021" targetFramework="net45" />
+  <package id="xunit" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.assert" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.core" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.extensions" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.0.0" targetFramework="net45" />
 </packages>
